# LearnGameEngine

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  Setup.py  get_lines_of_code.py
Engine/: AirwaveEngine.cpp  AirwaveEngine.h  CMakeLists.txt
Engine/Core/: CMakeLists.txt
Engine/Core/Application/: Application.cpp  Application.h  EntryPoint.h
Engine/Core/Base/: Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h
Engine/Core/Camera/: Camera.cpp  Camera.h  EditorCamera.h  OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h
Engine/Core/ECS/: Component.h  Entity.cpp  Entity.h  Node.cpp  Node.h  Scene.cpp  Scene.h  UUID.cpp  UUID.h
Engine/Core/ECS/Component/: BaseMaterialComponent.h  Component.h  ComponentSerializer.cpp  ComponentSerializer.h  MeshComponent.h  TransformComponent.h
Engine/Core/ECS/System/: System.h
Engine/Core/Geometry/: GeometryUtils.cpp  GeometryUtils.h
Engine/Core/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Engine/Core/Renderer/: Buffer.cpp  Buffer.h  FrameBuffer.cpp  FrameBuffer.h  GraphicsContext.h  RenderCommand.cpp  RenderCommand.h  RenderState.cpp  RenderState.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  ShaderLibrary.cpp  ShaderLibrary.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
Engine/Core/Renderer/Buffers/: Buffer.cpp  Buffer.h  Framebuffer.cpp  Framebuffer.h  VertexArray.cpp  VertexArray.h
Engine/Core/Renderer/Shaders/: Shader.cpp  Shader.h  ShaderLibrary.cpp  ShaderLibrary.h
Engine/Core/Renderer/Textures/: Texture.cpp  Texture.h  Texture2D.cpp  Texture2D.h
Engine/Platform/: CMakeLists.txt
Engine/Platform/Event/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Engine/Platform/Graphics/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFrameBuffer.cpp  OpenGLFrameBuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Engine/Platform/Utils/: Common.h  FileUtils.cpp  FileUtils.h  Log.cpp  Log.h  Time.h
Engine/Platform/Window/: Input.h  KeyCodes.h  MosueButtonCodes.h  Window.cpp  Window.h  WindowsWindow.cpp  WindowsWindow.h
Engine/Platform/Window/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
Engine/Resource/Json/: TransformComponent.json
Engine/Resource/Shader/00/: Basic3D.frag  Basic3D.vert  Screen.frag  Screen.vert  Texture.frag  Texture.vert
Sandbox/: CMakeLists.txt
Sandbox/01_NormalCube/: CMakeLists.txt  NormalCube.cpp
Sandbox/02_TextureCube/: CMakeLists.txt  TextureCube.cpp
Sandbox/03_FrameBuffer/: CMakeLists.txt  FrameBuffer.cpp
Sandbox/04_PackFBO/: CMakeLists.txt  PackFBO.cpp
Sandbox/05_ECS_Camera/: CMakeLists.txt  ECS_Camera.cpp
Sandbox/NormalCube/: CMakeLists.txt  NormalCube.cpp
Sandbox/Src/: Sandbox.cpp
Sandbox/TextureCube/: TextureCube.cpp
